// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlashMessage Component Beravior should be show 1`] = `
<mdsnackbar-stub>
  <span>
    this is the message
  </span>
   
  <mdbutton-stub
    class="md-primary"
    md-persistent=""
  >
    Close
  </mdbutton-stub>
</mdsnackbar-stub>
`;

exports[`FlashMessage Component Render default 1`] = `
<mdsnackbar-stub>
  <span>
    
  </span>
   
  <mdbutton-stub
    class="md-primary"
    md-persistent=""
  >
    Close
  </mdbutton-stub>
</mdsnackbar-stub>
`;
